--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,14 @@
     <title>Annotated Tutorial</title>
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link rel="stylesheet" href="css/main.css">
+
+    <!-- build:[src] css/ -->
+    <link rel="stylesheet" href="/select2/dist/css/select2.min.css">
+    <!-- /build -->
+
     <!-- build:[src] scripts/ -->
     <script src="modernizr/modernizr.js"></script>
     <!-- /build -->
-      <!--<link href="/select2/select2.min.css" rel="stylesheet" />
-      <script src="select2/select2.min.js"></script>-->
-
   </head>
   <body ng-controller="mainController">
     <div class="l-wrap">
@@ -262,6 +264,7 @@
     <script src="/angular-sanitize/angular-sanitize.js"></script>
     <script src="/moment/moment.js"></script>
     <script src="/angular-moment/angular-moment.js"></script>
+    <script src="/select2/dist/js/select2.full.min.js"></script>
     <!-- /build -->
 
     <!-- build:js scripts/templates.js -->
