--- a/app/index.html
+++ b/app/index.html
@@ -105,71 +105,79 @@
           </div>
         </div><!--
 
-        --><div class="input-container grid__item one-quarter" ng-if="inputPos != null" ng-style="{'top':50 + 'px'}" style="height:300px;padding: 5px;">
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-          <script src="scripts/smooth-scrolling.js"></script>
+     --><div class="input-container grid__item one-quarter" ng-if="inputPos != null" ng-style="{'top':50 + 'px'}" style="height:300px;padding: 5px;">
+              <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-          <div class ="window-title" ng-if="replyTo != null">Replying to {{$parent.replyToContributor}}.</div>
-          <div ng-if="replyTo==null">
-            <div ng-if="!secondMenu">
-                <div class="window-title" >COMMENTING ON</div>
-                <div ng-repeat="step in currentStep">
-                    <a class="return-button-first return-button" href="#{{step.id}}">Return</a>
-                <a class="close-button" ng-click="closeInput()" href="#{{step.id}}">Close</a>
-                </div>
-                <div class="selected-steps" ng-if="selectedStepsList.length == 0">None Selected</div>
-                <div>
-                    <div class="selected-steps" ng-if="selectedStepsList.length !=0">STEPS: {{list.toString()}}</div>
-                    <button class="menu-button menu-one" ng-click="menuSwitch()" ng-show="true"></button>
-                </div>
-                <br>
-                <div>
-                      <div ng-repeat="step in listOfSteps">
-                        <a class="menu-action-button preview-button" ng-if="step.step_number <listOfSteps.length" href="#{{step.id}}"></a>
-                        <button class="menu-action-button" ng-click="stepSelected(step);numberList()" ng-if="step.step_number <listOfSteps.length" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">
-                            <div class="plus-action-button" ng-if="selectedStepsList.indexOf(step)==-1">+</div>
-                            <div class="minus-action-button" ng-if="selectedStepsList.indexOf(step)!=-1">-</div>
-                        </button>
-                        <div class="step-list" ng-if="step.step_number==0">INTRO</div>
-                        <div class="step-list" ng-if="step.step_number==listOfSteps.length-1">END</div>
-                        <div class="step-list" ng-if="step.step_number!=0 && step.step_number <listOfSteps.length-1">STEP {{step.step_number}}</div>
+              <div class ="window-title" ng-if="replyTo != null">Replying to {{$parent.replyToContributor}}.</div>
+              <div ng-if="replyTo==null">
+                  <div ng-if="!secondMenu">
+                      <div class="window-title" >COMMENTING ON</div>
+                      <div ng-repeat="step in currentStep">
+                          <a class="close-button" ng-click="closeInput()" href="#{{step.id}}">Close</a>
+                          <a class="return-button-first return-button" href="#{{step.id}}">Return</a>
                       </div>
-                 </div>
-             </div>
-             <div ng-if="secondMenu">
-                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                 <script src="scripts/smooth-scrolling.js"></script>
-                <div class="window-title categories-title" ng-if="secondMenu">CATEGORIES</div>
-                <div ng-repeat="step in currentStep">
-                    <a class="return-button-second return-button" href="#{{step.id}}">Return</a>
-                    <a class="close-button close-button-second" ng-click="closeInput()" href="#{{step.id}}">Close</a>
-                </div>
-                <button ng-click="categorySelected('corrections')" class="icon icon-corrections" ng-class="{'selected selected-corrections': inputCategory == 'corrections'}" tooltip="Corrections"></button>
-                <button ng-click="categorySelected('details')" class="icon icon-details" ng-class="{'selected selected-details': inputCategory == 'details'}" tooltip="Tell me more!"></button>
-                <button ng-click="categorySelected('questions')" class="icon icon-questions" ng-class="{'selected selected-questions': inputCategory == 'questions'}" tooltip="Questions"></button>
-                <button ng-click="categorySelected('other')" class="icon icon-other" ng-class="{'selected selected-other': inputCategory == 'other'}" tooltip="Other notes"></button>
-                 <button class="menu-two menu-button" ng-click="menuSwitch()"></button>
-                 <div ng-if="inputCategory==''">PLEASE SELECT A CATEGORY</div>
-                </div>
-                </div>
-                 <div ng-show="(showTextarea || replyTo!==null) && secondMenu">
-                 <div class="description"  ng-if="!tutorial.baseline">
-                     <div ng-if="inputCategory == 'corrections'">Found a mistake? Help us out by pointing it out!</div>
-                     <div ng-if="inputCategory == 'details'">Information that may help others understand or do the tutorial in an alternate way.</div>
-                     <div ng-if="inputCategory == 'questions'">Need help with the tutorial? Ask a question for others to answer.</div>
-                     <div ng-if="inputCategory == 'other'">Have a note that doesn't fit in the other categories? Use this one!</div>
-                 </div>
-                 <div class="software-container" ng-if="(inputCategory == 'other') && !tutorial.baseline">
-                     <div ng-if="inputCategory == 'other'">How would you label your note?</div>
-                     <input type="text" ng-model="$parent.$parent.extraInput" />
-                 </div>
-                 <textarea class="input-text" ng-model="$parent.newNote" rows="6" placeholder="Please enter your note here."></textarea>
-                 <button ng-click="submitNote()" class="plain-button">Submit</button>
-             </div>
-            </div>
+                      <div class="selected-steps" ng-if="selectedStepsList.length == 0">None Selected</div>
+                      <div>
+                          <div class="selected-steps" ng-if="selectedStepsList.length !=0">STEPS: {{list.toString()}}</div>
+                          <button class="menu-button menu-one" ng-click="menuSwitch()" ng-show="true"></button>
+                      </div>
+                      <br>
+                      <div>
+                          <a class="menu-action-button preview-button" href="#general"></a>
+                          <button class="menu-action-button" ng-click="chosenGeneral();stepSelected(listOfSteps[listOfSteps.length-1]);numberList();" ng-class="{'selected-menu-button':selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])!=-1}">
+                              <div class="plus-action-button" ng-if="selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])==-1">+</div>
+                              <div class="minus-action-button" ng-if="selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])!=-1">-</div>
+                          </button>
+                          <div class="step-list">GENERAL</div>
+                          <div ng-repeat="step in listOfSteps" ng-if="step.step_number <listOfSteps.length-1" ng-style="{'disabledSteps':general}">
+                              <a class="menu-action-button preview-button" href="#{{step.id}}"></a>
+                              <button class="menu-action-button" id="step {{step.step_number}}" ng-click="stepSelected(step);numberList()" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">
+                                  <div class="plus-action-button" ng-if="selectedStepsList.indexOf(step)==-1">+</div>
+                                  <div class="minus-action-button" ng-if="selectedStepsList.indexOf(step)!=-1">-</div>
+                              </button>
+                              <div class="step-list" ng-if="step.step_number==0" ng-class="{'disabled-steps':general}">INTRO</div>
+                              <div class="step-list" ng-if="step.step_number==listOfSteps.length-2" ng-class="{'disabled-steps':general}">END</div>
+                              <div class="step-list" ng-if="step.step_number!=0 && step.step_number <listOfSteps.length-2" ng-class="{'disabled-steps':general}">STEP {{step.step_number}}</div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div ng-if="secondMenu">
+                      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                      <script src="scripts/smooth-scrolling.js"></script>
+                      <div class="window-title categories-title" ng-if="secondMenu">CATEGORIES</div>
+                      <div ng-repeat="step in currentStep">
+                          <a class="return-button-second return-button" href="#{{step.id}}">Return</a>
+                          <a class="close-button close-button-second" ng-click="closeInput()" href="#{{step.id}}">Close</a>
+                      </div>
+                      <button ng-click="categorySelected('corrections')" class="icon icon-corrections" ng-class="{'selected selected-corrections': inputCategory == 'corrections'}" tooltip="Corrections"></button>
+                      <button ng-click="categorySelected('details')" class="icon icon-details" ng-class="{'selected selected-details': inputCategory == 'details'}" tooltip="Tell me more!"></button>
+                      <button ng-click="categorySelected('questions')" class="icon icon-questions" ng-class="{'selected selected-questions': inputCategory == 'questions'}" tooltip="Questions"></button>
+                      <button ng-click="categorySelected('other')" class="icon icon-other" ng-class="{'selected selected-other': inputCategory == 'other'}" tooltip="Other notes"></button>
+                      <button class="menu-two menu-button" ng-click="menuSwitch()"></button>
+                      <div ng-if="inputCategory==''">PLEASE SELECT A CATEGORY</div>
+                  </div>
+              </div>
+
+              <div ng-show="showTextarea || replyTo!==null">
+                  <div class="description"  ng-if="replyTo==null">
+                      <div ng-if="inputCategory == 'corrections'">Found a mistake? Help us out by pointing it out!</div>
+                      <div ng-if="inputCategory == 'details'">Useful information that may help others understand and learn from the tutorial.</div>
+                      <div ng-if="inputCategory == 'questions'">Need help with the tutorial? Ask a question for others to answer.</div>
+                      <div ng-if="inputCategory == 'other'">Have a note that doesn't fit in the other categories? Use this one!</div>
+                  </div>
+                  <div class="software-container" ng-if="(inputCategory == 'other')">
+                      <div ng-if="inputCategory == 'other'">How would you label your note?</div>
+                      <input type="text" ng-model="$parent.$parent.extraInput"/>
+                  </div>
+                  <div ng-if="replyTo!=null">
+                      <div class="close-button reply-close" ng-click="closeInput()">Close</div>
+                      <br>
+                  </div>
+                  <textarea class="input-text" ng-model="$parent.newNote" rows="6" placeholder="Please enter your note here."></textarea>
+                  <button ng-click="submitNote()" class="plain-button">Submit</button>
+              </div>
           </div>
-          </div>
-        </div>
       </div>
     </div>
 
