--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 
     <!-- build:[src] css/ -->
     <link rel="stylesheet" href="/select2/dist/css/select2.min.css">
+    <link href="http://http://fonts.googleapis.com/css?family=Open+Sans'rel='stylesheet'type='text/css'">
     <!-- /build -->
       <link rel="stylesheet" href="css/main.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -162,7 +163,8 @@
                             general="note.step_id[0] === listOfSteps[listOfSteps.length-1].id"
                             date="dateFormat(note)"
                             current-note="note === currentNote"
-                            notelist="getNoteList(note)">
+                            notelist="getNoteList(note)"
+                              parent-category="note.category">
                       </note>
                       </div>
                   </div>
