--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
 
                               <div>
                                   <ui-select on-select="newFilter($item.id)" placeholder="Select a step" on-remove="newFilter($item.id)" multiple limit="4" close-on-select="false" ng-model="selectedItem" style="width:34.5%;margin:0 0 !Important;" theme="bootstrap" append-to-body="true">
-                                      <ui-select-match>
+                                      <ui-select-match placeholder="Select a step">
                                           <span style="height:20%;" ng-bind="$item.name"></span>
                                       </ui-select-match>
                                       <ui-select-choices repeat="item in (itemArray | filter: $select.search) track by item.id">
