--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
                             user="contributor"
                             date="dateFormat(note)"
                             current-reply="replyTo"
-                            top-note="listOfNotes.indexOf(note)==0">
+                            has-reply="hasReply(note)">
                       </note>
                       </div>
                       <div class="input-container grid__item three-tenths">
