design changes for replies

--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,8 @@
                             user="contributor"
                             date="dateFormat(note)"
                             current-reply="replyTo"
-                            has-reply="hasReply(note)">
+                            has-reply="hasReply(note)"
+                            reply-one="true">
                       </note>
                       </div>
                       <div class="input-container grid__item three-tenths">
